E2e tests (#674)
* infrastrucutre for e2e tests

* update github action

* Fix pipeline

* remove legacy class

add shortcode tests for demo project

* add some basic tests

* disable performance tests on ci

* remove deprecations

* update hook name to be more consistent

* fix tests

* add missing slash

* add etag handling

* move CMSServerExtension to test framework

* move test server to cms-test-server module

* fix usage of deprecated interface

* fix for shortcode parameters

---------

Co-authored-by: Thorsten Marx <thorsten.marx@bookwire.de>